[package]
name = "altr"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "CLI tool to alter words seamlessly while preserving casing"
tags = ["cli", "refactor", "alter", "rename"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.56"

[repository]
url = "https://github.com/jnsahaj/altr"