[package]
name = "altr"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "CLI tool to alter words seamlessly while preserving casing"
tags = ["cli", "refactor", "alter", "rename"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
derive_more = "0.99.17"
thiserror = "1.0.56"

[repository]
url = "https://github.com/jnsahaj/altr"
